Improve holiday service performance.